# test_task1

./: CMakeLists.txt  Dot.cpp  Dot.h  Segment.cpp  Segment.h  build_scanline.cpp  build_scanline.h  initial_shell.cpp  initial_shell.h  intersection_dot_with_segment.cpp  intersection_dot_with_segment.h  main.cpp  point_location.cpp  point_location.h  segment_location.cpp  segment_location.h
tests/: test0.txt  test1.txt  test2.txt  test3.txt  test4.txt
